[package]
name = "nice-sys"
version = "0.1.1"
authors = ["Scott J Maddox <scottjmaddox@gmail.com>"]
description = "FFI bindings to libnice"
license = "MIT/Apache-2.0"
repository = "https://github.com/scottjmaddox/rust-nice-sys"
documentation = "https://docs.rs/nice-sys"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
glib-sys = ">= 0.5"
gobject-sys = ">= 0.5"
gio-sys = ">= 0.5"

[build-dependencies]
pkg-config = ">= 0.3"
